--- a/WorktoCome1/WorktoCome1.csproj
+++ b/WorktoCome1/WorktoCome1.csproj
@@ -46,6 +46,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="EtherCAT_DLL.cs" />
+    <Compile Include="EtherCAT_DLL_Err.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
