--- a/WorktoCome1/WorktoCome1.csproj
+++ b/WorktoCome1/WorktoCome1.csproj
@@ -48,6 +48,7 @@
   <ItemGroup>
     <Compile Include="EtherCAT_DLL.cs" />
     <Compile Include="EtherCAT_DLL_Err.cs" />
+    <Compile Include="EtherCAT_DLL_x64.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
