--- a/WorktoCome1/WorktoCome1.csproj
+++ b/WorktoCome1/WorktoCome1.csproj
@@ -46,8 +46,6 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="EtherCAT_DLL.cs" />
-    <Compile Include="EtherCAT_DLL_Err.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -143,6 +141,12 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\EtherCATFunction\EtherCATFunction.csproj">
+      <Project>{7e689c66-b1b0-4ad0-9788-d5ac454b94df}</Project>
+      <Name>EtherCATFunction</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
