--- a/EtherCATFunction/EtherCATFunction.csproj
+++ b/EtherCATFunction/EtherCATFunction.csproj
@@ -43,6 +43,7 @@
   <ItemGroup>
     <Compile Include="EtherCAT_DLL.cs" />
     <Compile Include="EtherCAT_DLL_Err.cs" />
+    <Compile Include="Initial.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
