--- a/EtherCATFunction/EtherCATFunction.csproj
+++ b/EtherCATFunction/EtherCATFunction.csproj
@@ -44,6 +44,7 @@
     <Compile Include="EtherCAT_DLL.cs" />
     <Compile Include="EtherCAT_DLL_Err.cs" />
     <Compile Include="Initial.cs" />
+    <Compile Include="PPMove.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
