--- a/WorktoCome1/WorktoCome1.csproj
+++ b/WorktoCome1/WorktoCome1.csproj
@@ -201,6 +201,7 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <None Include="Recipe.json" />
     <None Include="users.json" />
   </ItemGroup>
   <ItemGroup>
